# kiosk

./: .gitignore  alembic.ini  check_db.py  check_user_info_schema.py  database.py  find_manager.py  generate_dummy_data.py  index.html  main.py  models.py  pyproject.toml  schemas.py  security.py  test_insert.py  test_raw_insert.py
alembic/: env.py
alembic/versions/: 1012f13bcd2d_init.py  bb1203ab14b1_add_product_stock.py
core/: dependency.py  security.py
models/: __init__.py  category.py  models.py  order.py  order_item.py  product.py  shelve.py  store.py  user.py
routers/: category.py  order.py  product.py  shelve.py  social_login.py  statistics.py  store.py  user.py  users.py
schemas/: category.py  order.py  order_item.py  product.py  shelve.py  store.py  user.py
service/: order_service.py
